Fixed width in css
".hunger" width was too large lowered to 15px

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ p {
 .Hunger {
     /* Controls the Icons located within status effects */
     margin: auto;
-    width: 30px;
+    width: 15px;
     display: initial;
 }
 
